welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:13: error: type mismatch;
 found   : Unit
 required: Int
				return
                                ^close10:15: error: type mismatch;
 found   : Unit
 required: Int
				return
                                ^